# MUHUR

./: LICENSE  MUHUR_PROJE_DOKUMANI.md  README.md  build.gradle  gradle.properties  gradlew  local.properties.template  settings.gradle
.github/workflows/: main.yml
app/: app_build.gradle  build.gradle
app/src/data/: characters.md
app/src/engine/: CardEngine.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/scenario/Opposition_1/: README.md  acts.md  cards.json  endings.json
app/src/main/assets/scenario/Opposition_2/: acts.md  cards.json
app/src/main/assets/scenario/Opposition_3/: cards.json  endings.json
app/src/main/cpp/: CMakeLists.txt  main.cpp  png_loader.h
app/src/main/java/com/muhur/game/: GameActivity.java  GameRenderer.java  GameState.java  GameView.java  ScenarioEngine.java
app/src/main/res/values/: strings.xml
app/src/scenario/Opposition_1/: endings.md  intro.md
app/src/scenario/Opposition_3/: acts.md
app/src/scenario/Ruling_Era/: acts.md
github/workflows/: main.yml
